tdf#118859: Avoid trying to remove already removed nodes

Regression from commit db04be037b611e296ef9f2542322c52ed82d7a2b

Change-Id: I530c00f6357b4822654add6e5f2eecb3252b88ae
Reviewed-on: https://gerrit.libreoffice.org/58612
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 576fac6f6199a87fb07e4a067abaa18c89b6d7ea)